src/index.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: Inter, sans-serif;
  background-color: #fafaf8;
}

/* HEADER */

header {
  display: flex;
  position: sticky;
  top: 0;
  justify-content: center;
  align-items: center;
  background-color: rgba(255, 255, 255, 1);
  gap: 1.5em;
  height: 6.5rem;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),
    0px 1px 2px 0px rgba(0, 0, 0, 0.06);
}

header > img {
  width: 50px;
}

header > h1 {
  font-weight: 400;
}

main {
  padding: 70px 30px 10px;
}

/* FORM */

.add-ingredient-form {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  height: 38px;
}

/* INPUT */

.add-ingredient-form > input {
  border: 1px solid #d1d5db;
  border-radius: 6px;
  padding: 12px 13px;
  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
  flex-grow: 2;
  min-width: 150px;
  max-width: 560px;
  font-family: Inter, sans-serif;
  font-size: small;
}

/* BUTTON */

.add-ingredient-form > button {
  font-family: Inter, sans-serif;
  border: none;
  border-radius: 6px;
  background-color: #141413;
  color: #fafaf8;
  width: 150px;
  height: 2.12rem;
  font-size: 0.875rem;
  font-weight: 300;
}

.add-ingredient-form > button::before {
  content: '+';
  margin-right: 5px;
}

.add-ingredient-form > button:hover {
  cursor: pointer;
}

/* INGREDIENT LIST SECTION */

section {
  display: flex;
  flex-direction: column;
  gap: 25px;
}

.ingredient-list-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 740px;
  margin: 10px auto;
}

.ingredient-list-container > h3 {
  font-size: 28px;
  margin-top: 25px;
  font-weight: 600;
  color: #475467;
}

.ingredient-list {
  display: flex;
  flex-direction: column;
  gap: 7px;
  margin: 0;
}

.ingredient-list > li {
  margin: 5px;
  font-size: 1.125rem;
  color: #475467;
  line-height: 28px;
}

/* GET RECIPE CONTAINER */

.get-recipe-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  border-radius: 8px;
  background: #f0efeb;
  padding: 10px 28px;
  width: 100%;
  max-width: 900px;
  min-width: 280px;
  margin: 20px auto;
}

.get-recipe-container h3 {
  font-size: 1.35rem;
  font-weight: 590;
  line-height: 24px;
}

.get-recipe-container p {
  color: #6b7280;
  font-size: 0.875rem;
  line-height: 25px;
}

.get-recipe-container button {
  border: none;
  border-radius: 6px;
  background: #d17557;
  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
  color: #fafaf8;
  padding: 9px 17px;
  font-family: Inter, sans-serif;
  font-size: 0.875rem;
  cursor: pointer;
}

/* SUGGESTED RECIPE SECTION */

.suggested-recipe-container {
  display: flex;
  margin: auto;
  margin-top: 10px;
  width: 100%;
  min-width: 280px;
  max-width: 800px;
  color: #475467;
  line-height: 28px;
  font-size: 1.125rem;
  font-weight: 400;
}

.suggested-recipe-container > h3 {
  font-family: Inter, sans-serif;
  font-size: 28px;
  font-weight: 600;
  margin-top: 60px;
}

.suggested-recipe-container > h4 {
  margin: 0;
  font-size: larger;
  line-height: 0;
  font-weight: 600;
}

.suggested-recipe-container > p {
  margin: 0;
  padding: 0;
  text-decoration: 0;
}

.suggested-recipe-container ul li,
.suggested-recipe-container ol li {
  margin: 15px;
}

